refactor: módulo JSON:API, correcciones Sonar y mejoras de mantenibilidad
- Módulo ecommerce-jsonapi-model: modelos compartidos JSON:API (document, error, links, errorSource) para products-service e inventory-service
- products-service e inventory-service usan el módulo; eliminadas clases duplicadas JsonApiDocument, JsonApiError, JsonApiLinks, JsonApiErrorSource
- Resilience4j: corregida config circuit breaker (instances.products.* sin .default)
- Resources: campo type renombrado a resourceType con @JsonProperty("type") en InventoryResource, PurchaseResource, ProductResource (evitar confusión con constante TYPE)
- ProductController: tipo concreto JsonApiDocument<List<ProductResource>> en list(), eliminado cast innecesario
- ValidationExceptionHandler: Stream.toList() en lugar de collect(Collectors.toList())
- Añadido InventoryControllerWebMvcTest y script run-sonar.sh

Made-with: Cursor